...
          <BottomSheetFlatList
            data={autocompleteResult}
            renderItem={renderLocationItem}
            keyboardShouldPersistTaps="always"
            ListHeaderComponent={
              <AutocompleteItem
                title="在地圖上設定地點"
                address=""
                onPress={() => {
                  bottomSheetRef.current?.collapse()
                }}
              />
            }
...
        <View style={styles.centerPinContainer}>
          <PinIcon style={styles.centerPin} />
        </View>
        <View style={styles.confirmButtonContainer}>
          {!isLoading && (
            <Button size="large" style={styles.confirmButton} onPress={handlePressConfirm}>
              完成
            </Button>
          )}
        </View>
      </View>
    </SafeAreaView>
  )
...
