...
      )}

      <View style={{ flex: 1, paddingLeft: 10, paddingRight: 5 }}>
        <Input
          size="small"
          placeholder={
            index === 0 ? '上車地點' : waypoints.length === 2 ? '下車地點' : '新增停靠點'
          }
          value={item.title}
          onFocus={() => {
            navigation.navigate('SelectLocationScreen', {
              waypointIndex: index
            })
...
          showsUserLocation={true}
        >
          {routeCoordinates && <Polyline coordinates={routeCoordinates} strokeWidth={5} />}
        </MapView>
        <View style={{ position: 'absolute', bottom: '5%', width: '100%', paddingHorizontal: 20 }}>
          <Button onPress={handleSubmit(onSubmit)} size="large" style={{ borderRadius: 12 }}>
            發布行程
          </Button>
        </View>
      </BottomSheetModalProvider>
    </SafeAreaView>
  )
}
...
